--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="template/FlexStart/assets/img/clients/sttnf.png" class="img-fluid" alt=""></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -204,7 +204,6 @@
     <section id="testimoni-meditasi" class="testimoni1">
       <div class="container" data-aos="fade-up">
         <header class="section-testi-m">
-          <h3 class="d-flex justify-content-center">Testimoni Meditasi </h3>
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -216,13 +215,14 @@
               <div class="carousel-item active">
                 <div class="row">
                   <div class="col-sm-2">
-                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/hijab-icon-main.png" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>Suka banget!</h5>
+                    <p>"Suka banget sama aplikasi ini, Aku lebih bisa ngerasain lebih mencintai diri sendiri dan fokus.
+                    Thank you!"</p>
+                    <h6>Chika</h6>
+                    <p>Mahasiswi</p>
                   </div>
                 </div>
               </div>
@@ -233,10 +233,11 @@
                     <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>Mudah dan Enak digunakan!</h5>
+                    <p>"Mudah digunakan dan enak dipake dah pokonya. Suka bangetl Aku yang sering megalami
+                    cemas, sekarang sudah berkurang berkat meditasi yg diberikan."</p>
+                    <h6>Ismail</h6>
+                    <p>Mahasiswa</p>
                   </div>
                 </div>
               </div>
@@ -244,13 +245,13 @@
               <div class="carousel-item">
                 <div class="row">
                   <div class="col-sm-2">
-                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/hijab-icon-main.png" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>KBL! KBL!! KBL!!!</h5>
+                    <p>"Dalam segi  fiturnya sangat lengkap, sesi meditasi dan cerita sebelum tidur nya sangat menenangkan. Pokoknya KEREN BANGET LOH "</p>
+                    <h6>Arni</h6>
+                    <p>Mahasiswi</p>
                   </div>
                 </div>
             </div>
@@ -307,7 +308,6 @@
     <section id="testimoni-meditasi" class="testimoni1">
       <div class="container" data-aos="fade-up">
         <header class="section-testi-m">
-          <h3 class="d-flex justify-content-center">Testimoni Konsultasi </h3>
           <div id="carouselKonsultasi" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -319,13 +319,14 @@
               <div class="carousel-item active">
                 <div class="row">
                   <div class="col-sm-2">
-                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/hijab-icon-main.png" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>Rekomdedasi banget</h5>
+                    <p>"Recommended banget buat Seseorang yang lagi ada masalah tapi bingung mau curhat ke
+                    siapa. Responnya juga lumayan cepat. The best lah pokoknya! Thank you :)"</p>
+                    <h6>Merina</h6>
+                    <p>Mahasiswi</p>
                   </div>
                 </div>
               </div>
@@ -336,10 +337,12 @@
                     <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>Sangat Membantu!</h5>
+                    <p>"Sangat membantu! Saya dapat berbicara dengan psikolog yang ramah dan tast response.
+                    Enjoy banget konseling disini, berasa curhat dengan teman sendiri. Sekali lagi terima kasih
+                    Mental.in."</p>
+                    <h6>Gunawan</h6>
+                    <p>Mahasiswa</p>
                   </div>
                 </div>
               </div>
@@ -350,10 +353,11 @@
                     <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
                   </div>
                   <div class="col-sm isi">
-                    <h5>Wow keren</h5>
-                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
-                    <h6>Udin</h6>
-                    <p>Pengusaha</p>
+                    <h5>Saya suka</h5>
+                    <p>"Just. Loved It! Saya sangat lega ketika bisa bercerita kepada sesorang yang memahami
+                    permasalahan dan mendengarkan saya tanpa menghakimi. Tanggapannya ramah sekali."</p>
+                    <h6>Luthan</h6>
+                    <p>Mahasiswa</p>
                   </div>
                 </div>
             </div>
@@ -415,45 +419,64 @@
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
+        <div class="row gy-4">
+          <div class="col-sm-6">
+            <div class="count-box">
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Gangguan Mental Ringan</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="count-box">
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Gangguan Mental Berat</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="row gy-4">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
+              <img src="/template/FlexStart/assets/img/icon/world.png" width="50" class="img-fluid" alt="">
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
+                <span data-purecounter-start="0" data-purecounter-end="48 " data-purecounter-duration="1" class="purecounter"></span>
+                <p>Negara Asia</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
+              <img src="/template/FlexStart/assets/img/icon/remaja.png" width="60" class="img-fluid" alt="">
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
+                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Remaja</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-headset" style="color: #15be56;"></i>
+              <img src="/template/FlexStart/assets/img/icon/dewasa.png" width="60" class="img-fluid" alt="">
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
+                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Dewasa</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-people" style="color: #bb0852;"></i>
+              <img src="/template/FlexStart/assets/img/icon/teman-ceritamu.jpg" width="80" class="img-fluid" alt="">
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hard Workers</p>
+                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+                <p>#TemanCeritamu</p>
               </div>
             </div>
           </div>
@@ -563,12 +586,12 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="template/FlexStart/assets/img/team/team-1.jpg" width="250" class="img-fluid" alt="">
+                      <img src="template/FlexStart/assets/img/team/meri.png" width="250" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-twitter"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/meryna.id/"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
@@ -584,12 +607,12 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="https://dummyimage.com/250x250/sdfsadg/333333" class="img-fluid" alt="">
+                      <img src="template/FlexStart/assets/img/team/arni-test.jpg" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-twitter"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
@@ -605,12 +628,12 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="https://dummyimage.com/250x250/53455/erty" class="img-fluid" alt="">
+                      <img src="/template/FlexStart/assets/img/team/chika.png" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="https://twitter.com/b0bacutes?t=GF5_MAVPYCK5FOVHZX66Cw&s=08"><i class="bi bi-twitter"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/chika.aul/"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="www.linkedin.com/in/chika-aulia-zahwa-b8ba96227"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
@@ -647,12 +670,12 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="https://dummyimage.com/250x250/53455/erty" class="img-fluid" alt="">
+                      <img src="/template/FlexStart/assets/img/team/alip.png" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-twitter"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
@@ -670,7 +693,7 @@
                     <div class="member-img">
                       <img src="template/FlexStart/assets/img/team/mail.jpg" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
+                        <a  href="#!"><i class="bi bi-twitter"></i></a>
                         <a target="_blank" href="https://facebook.com/ismailhere.7"><i class="bi bi-facebook"></i></a>
                         <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
                         <a target="_blank" href="https://www.linkedin.com/in/7muh-ismail/"><i class="bi bi-linkedin"></i></a>
@@ -846,7 +869,7 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
             <p>
-              <strong>Whatsapp:</strong> <a href="https://api.whatsapp.com/send/?phone=6281385504878&text&app_absent=0" target="_blank">+62 813 8550 4878</a><br>
+              <strong>Line:</strong> @akm6927c<br>
               <strong>Email:</strong> <a href="mailto:mentalinn03@gmail.com" target="_blank">mentalinn03@gmail.com</a> <br>
             </p>
 
